dashboard api and delete waiting list api and add records flow

--- a/app/src/main/res/layout/trial_layout.xml
+++ b/app/src/main/res/layout/trial_layout.xml
@@ -1,54 +1,21 @@
-<LinearLayout android:layout_marginTop="@dimen/dp6"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/result_white_box_copy"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1"
-       android:gravity="center">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Appointment"
-            android:gravity="center"
-            android:textColor="@color/tagColor" />
+    android:layout_marginTop="@dimen/dp6"
+    android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"
-            android:text="Completed"
-            android:textColor="@color/tagColor" />
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/tagColor" />
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginStart="@dimen/dp20"
-        android:layout_weight="1"
-        android:layout_marginBottom="@dimen/dp3"
-        android:layout_marginTop="@dimen/dp3"
-        android:gravity="center"
-        android:layout_marginLeft="@dimen/dp22">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Appointment"
-            android:textColor="@color/Red" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:textColor="@color/Red"/>
-    </LinearLayout>
+        android:background="@drawable/result_white_box_copy"
+        android:orientation="vertical">
 
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:src="@drawable/delete" />
+    </RelativeLayout>
 </LinearLayout>
