--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -58,4 +58,6 @@
     <dimen name="dp58">58dp</dimen>
     <dimen name="dp60">60dp</dimen>
     <dimen name="dp22">22dp</dimen>
+    <dimen name="dp24">24dp</dimen>
+    <dimen name="dp26">26dp</dimen>
 </resources>
