--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -35,7 +35,7 @@
                 android:layout_toEndOf="@+id/backButton"
                 android:layout_toRightOf="@+id/backButton">
 
-                <ImageView
+                <com.rescribe.doctor.ui.customesViews.CircularImageView
                     android:id="@+id/profilePhoto"
                     android:layout_width="@dimen/dp40"
                     android:layout_height="@dimen/dp40"
