--- a/app/src/main/res/layouts/waiting_list/layout/list_item_draggable.xml
+++ b/app/src/main/res/layouts/waiting_list/layout/list_item_draggable.xml
@@ -25,11 +25,11 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/dp8"
             android:layout_marginStart="@dimen/dp8"
-            android:layout_weight=".4"
-            android:padding="@dimen/activity_horizontal_margin">
+            android:layout_weight=".45">
 
             <ImageButton
                 android:id="@+id/deleteButton"
+                android:layout_margin="@dimen/dp6"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:srcCompat="@drawable/ic_delete_24dp"
