--- a/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointment_patients_item_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointment_patients_item_layout.xml
@@ -190,7 +190,7 @@
                 <com.rescribe.doctor.ui.customesViews.CustomTextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Cancel"
+                    android:text="Cancelled"
                     android:textColor="@color/Red"
                     app:customFont="@string/roboto_medium" />
             </LinearLayout>
@@ -205,7 +205,7 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp7"
+        android:layout_margin="@dimen/dp4"
         android:visibility="gone"
         tools:visibility="visible"
         android:background="@drawable/result_white_box"
@@ -348,6 +348,7 @@
                 android:id="@+id/checkbox"
                 tools:visibility="visible"
                 android:visibility="gone"
+                android:padding="@dimen/dp4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
