--- a/app/src/main/res/layouts/profile/layout/doctor_header_info.xml
+++ b/app/src/main/res/layouts/profile/layout/doctor_header_info.xml
@@ -55,8 +55,8 @@
                     android:background="@drawable/ruppee_tag"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:visibility="visible"
-                    tools:visibility="visible">
+                    android:visibility="gone"
+                    tools:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -93,6 +93,7 @@
                 </LinearLayout>
 
                 <ImageView
+                    android:visibility="gone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
@@ -284,17 +285,17 @@
 
             <Spinner
                 android:id="@+id/clinicNameSpinner"
-                style="@style/SpinnerTheme"
-                android:visibility="gone"
+                style="@style/SpinnerThemeProfile"
+                android:visibility="visible"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:spinnerMode="dropdown" />
             <com.rescribe.doctor.ui.customesViews.CustomTextView
-                style="@style/SpinnerTheme"
-                android:paddingLeft="@dimen/dp16"
-                android:layout_width="wrap_content"
+                style="@style/SpinnerThemeProfile"
+                android:layout_width="match_parent"
+                android:visibility="gone"
                 android:layout_height="match_parent"
-               android:text="Kapila Hospital, Kothrud, Pune" />
+                android:spinnerMode="dropdown"/>
 
         </LinearLayout>
 
