--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,6 +56,12 @@
         <item name="android:textStyle">normal</item>
         <item name="android:popupBackground">@drawable/curve_white_back</item>
     </style>
+    <style name="SpinnerThemeProfile" parent="android:Widget.Spinner">
+        <item name="android:background">@drawable/spinner_bg_profile</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:popupBackground">@color/white</item>
+    </style>
 
 
     <declare-styleable name="ZoomageView">
