--- a/app/src/main/res/layouts/waiting_list/layout/waiting_content_layout.xml
+++ b/app/src/main/res/layouts/waiting_list/layout/waiting_content_layout.xml
@@ -75,6 +75,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         style="@style/myRecyclerViewStyle"
+        android:background="@color/divider"
         tools:visibility="visible" />
 
 </LinearLayout>
