--- a/app/src/main/res/layouts/waiting_list/layout/list_item_draggable.xml
+++ b/app/src/main/res/layouts/waiting_list/layout/list_item_draggable.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/divider">
+    android:background="@color/transparent">
 
     <LinearLayout
         android:id="@+id/behind_views"
@@ -43,7 +43,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/divider"
+        android:background="@color/transparent"
         tools:visibility="invisible">
 
         <LinearLayout
