--- a/app/src/main/res/values-sw720dp/screentype.xml
+++ b/app/src/main/res/values-sw720dp/screentype.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="grey">#b3b3b3</color>
+    <bool name="isTablet">true</bool>
 </resources>
