--- a/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointment_patients_item_layout.xml
+++ b/app/src/main/res/layouts/patient/patient_appointment/layout/my_appointment_patients_item_layout.xml
@@ -21,7 +21,7 @@
 
         <com.rescribe.doctor.ui.customesViews.CustomTextView
             android:id="@+id/clinicNameTextView"
-            android:layout_width="130dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/bulletImageView"
