--- a/app/src/main/res/layouts/global_ui_for_connect/layout/patient_connect_fragment.xml
+++ b/app/src/main/res/layouts/global_ui_for_connect/layout/patient_connect_fragment.xml
@@ -57,7 +57,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="12dp"
         android:layout_marginRight="12dp"
-        android:src="@drawable/ic_add_action"
+        android:src="@drawable/search_patient"
         android:visibility="visible"
         app:backgroundTint="@color/floating_blue_color" />
     </RelativeLayout>
