--- a/app/src/main/res/layouts/login/layout/fragment_login.xml
+++ b/app/src/main/res/layouts/login/layout/fragment_login.xml
@@ -114,7 +114,7 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp14"
                     android:textStyle="bold"
-                    android:visibility="invisible" />
+                    android:visibility="visible" />
 
                 <View
                     android:layout_width="@dimen/dp2"
@@ -122,7 +122,7 @@
                     android:layout_marginLeft="@dimen/dp10"
                     android:layout_marginRight="@dimen/dp10"
                     android:background="@color/white"
-                    android:visibility="invisible" />
+                    android:visibility="gone" />
 
                 <com.rescribe.doctor.ui.customesViews.CustomTextView
                     android:id="@+id/signup"
@@ -134,7 +134,7 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/sp14"
                     android:textStyle="bold"
-                    android:visibility="invisible" />
+                    android:visibility="gone" />
             </LinearLayout>
         </LinearLayout>
 
